mem_dbg/tests/snapshots/test_all_types_mem_dbg_insta__humanize_depth_2.snap
---
source: mem_dbg/tests/test_all_types_mem_dbg_insta.rs
expression: depth_output
---
43.30 kB 100.00% : test_all_types_mem_dbg_insta::all_types_helper::AllTypesStruct<'_>
